--- a/Index.html
+++ b/Index.html
@@ -7,22 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>TAMIL SEX CHAT</h1>
-    </header>
-    <main>
-        <section id="chat-log"></section>
-        <form id="chat-form">
-            <input type="text" id="message-input" placeholder="Type a message...">
-            <button id="send-btn">Send</button>
-        </form>
-        <video id="local-video" width="400" height="300"></video>
-        <video id="remote-video" width="400" height="300"></video>
-        <button id="call-btn">Start Video Call</button>
-        <button id="end-call-btn">End Video Call</button>
-        <input type="file" id="image-input" accept="image/*">
-        <button id="send-image-btn">Send Image</button>
-    </main>
-    <script src="script.js"></script>
+    <script src="https://chatwee-api.com/v2/script/667541f4f18a6a599555d052.js"></script>
 </body>
 </html
